kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sgi-frontend
    version: v3
  name: sgi-frontend
  namespace: sgi
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: sgi-frontend
    version: v3
  type: NodePort
