kubernetes/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sgi-frontend-vs
  namespace: sgi
spec:
  gateways:
    - sgi-gateway
  hosts:
    - "sgi.guarida.com.br"
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /_next
    - uri:
        prefix: /login
    - uri:
        prefix: /api/v3
    - uri:
        prefix: /assets
    route:
    - destination:
        host: sgi-frontend
        port:
          number: 3000
